# pepper_control_itd

./: .gitignore  CMakeLists.txt  README.md  qiproject.xml
src/: CMakeLists.txt  itd_control.cpp
src/robot/BSSLocate/: BSSlocate.cpp  BSSlocate.h  BSSstft.cpp  BSSstft.h
src/robot/Misc/: misc.cpp  misc.h
